// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 1`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753262,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 2`] = `
Array [
  1577526753262,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 3`] = `"/collections/1577526753262?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 4`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753263,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 5`] = `
Array [
  1577526753263,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 6`] = `"/collections/1577526753263?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 7`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753264,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 8`] = `
Array [
  1577526753264,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 9`] = `"/collections/1577526753264?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 10`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753265,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 11`] = `
Array [
  1577526753265,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 12`] = `"/collections/1577526753265?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 13`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753266,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 14`] = `
Array [
  1577526753266,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 15`] = `"/collections/1577526753266?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 16`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753267,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 17`] = `
Array [
  1577526753267,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 18`] = `"/collections/1577526753267?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 19`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753268,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 20`] = `
Array [
  1577526753268,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = false 21`] = `"/collections/1577526753268?type=6&subtype=5"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 1`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753262,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 2`] = `
Array [
  1577526753262,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 3`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 4`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753263,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 5`] = `
Array [
  1577526753263,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 6`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 7`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753264,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 8`] = `
Array [
  1577526753264,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 9`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 10`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753265,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 11`] = `
Array [
  1577526753265,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 12`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 13`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753266,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 14`] = `
Array [
  1577526753266,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 15`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 16`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753267,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 17`] = `
Array [
  1577526753267,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 18`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 19`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1577526753268,
      "widgetSubType": 5,
      "widgetType": 6,
    },
  },
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 20`] = `
Array [
  1577526753268,
  6,
  5,
]
`;

exports[`SmallSquareCarouselBanner widget tests should handle click action correctly if AppInterface isDefined = true 21`] = `"/"`;

exports[`SmallSquareCarouselBanner widget tests should render the widget correctly 1`] = `
<DocumentFragment>
  .emotion-8 {
  padding: 16px 16px 8px;
  border-bottom: 8px solid #F2F2F2;
}

.emotion-0 {
  color: #333;
  font-weight: 600;
  margin-bottom: 10px;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  min-width: 33%;
  text-align: center;
  margin-right: 10px;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:visited,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

<div
    class="emotion-8"
  >
    <div
      class="emotion-0"
    >
      Shop By Store
    </div>
    <div>
      <div>
        HorizontalSlider Placeholder
      </div>
      <a
        class="emotion-1"
        data-testid="banner-link-0"
        href="/collections/1577526753262?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/nWGU193lKLynMZ5awpQo1BHICxqXUaPpWPc+0rYe08.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-1"
        href="/collections/1577526753263?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/v4NPJbz44lk0YStL7P3En++3Mv44m3WDbTdLRqOF3Hw.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-2"
        href="/collections/1577526753264?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/L7HcZFS0Ab9QPKs3XHFXTZWaI2DTalS4b7av+TtI4Gw.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-3"
        href="/collections/1577526753265?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/fR8WwUcaiod4bHJO8AIsnWRdMggtDJmflO564Ay7Pno.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-4"
        href="/collections/1577526753266?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/+r+SJ8zWwiH0Ot9nSuSVtqIloKOWi7DK2mhBxglyLhE.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-5"
        href="/collections/1577526753267?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/b4myMx5aI7DO48Aw5M1CSSmN+iPRPyD8leOjA7zp+U.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
      <a
        class="emotion-1"
        data-testid="banner-link-6"
        href="/collections/1577526753268?type=6&subtype=5"
      >
        <span
          class=" lazy-load-image-background "
          style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; height: 150px;"
        >
          <img
            height="150"
            src="https://jiomerchant.akamaized.net/static/delivery_associate/7ZT4Yd1aPKqlQeRC0W+6SXeBqJ1CJmCFQAloVzE2mQ.png?impolicy=resizeforheight&h=150"
          />
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
